feat(Rebranding / Typography): font-family changes (#1804)
* feat: add fonts file and css

* feat: add fonts to files

* feat: add fonts export

* feat: add lighter font

* add display swap for tasa

* feat: change font family tokens

* feat: add heading font family for native

* feat: change font for storybook

* feat: add fonts from csb

* feat: use inter variable font

* feat: generate razorpay's latin fonts

* fix: unicode range

* refactor: remove unused fonts

* fix: standardise font file names

* fix: blade-extra name

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -21,7 +21,9 @@
     "tokens.d.ts",
     "tokens.js",
     "utils.d.ts",
-    "utils.js"
+    "utils.js",
+    "fonts",
+    "fonts.css"
   ],
   "keywords": [
     "design system",
@@ -32,6 +34,9 @@
   ],
   "main": "./build/components/index.web.js",
   "exports": {
+    "./fonts.css": {
+      "default": "./fonts.css"
+    },
     "./components": {
       "react-native": {
         "types": "./build/components/index.native.d.ts",
