--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@razorpay/blade",
   "description": "The Design System that powers Razorpay",
-  "version": "10.18.0-14",
+  "version": "10.18.0-17",
   "license": "MIT",
   "engines": {
     "node": ">=18.12.1"
@@ -18,10 +18,13 @@
     "codemods",
     "components.d.ts",
     "components.js",
+    "components.native.js",
     "tokens.d.ts",
     "tokens.js",
+    "tokens.native.js",
     "utils.d.ts",
-    "utils.js"
+    "utils.js",
+    "utils.native.js"
   ],
   "keywords": [
     "design system",
