--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@razorpay/blade",
   "description": "The Design System that powers Razorpay",
-  "version": "10.19.1",
+  "version": "10.19.1-6",
   "license": "MIT",
   "engines": {
     "node": ">=18.12.1"
@@ -118,10 +118,8 @@
   },
   "dependencies": {
     "@babel/runtime": "7.20.0",
-    "@emotion/react": "11.11.1",
     "@floating-ui/react-native": "0.10.1",
     "@floating-ui/react": "0.25.4",
-    "@table-library/react-table-library": "4.1.7",
     "@types/body-scroll-lock": "3.1.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "@use-gesture/react": "10.2.24",
@@ -130,7 +128,9 @@
     "react-native-pager-view": "6.2.1",
     "react-native-tab-view": "3.5.2",
     "tinycolor2": "1.6.0",
-    "use-presence": "1.1.0"
+    "use-presence": "1.1.0",
+    "@emotion/react": "11.11.1",
+    "@table-library/react-table-library": "4.1.7"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -184,7 +184,6 @@
     "@types/jest-axe": "3.5.5",
     "@types/jscodeshift": "0.11.6",
     "@types/jsdom": "20.0.1",
-    "@types/lodash": "4.14.168",
     "@types/react": "17.0.38",
     "@types/react-native": "0.72.2",
     "@types/react-test-renderer": "17.0.1",
@@ -217,7 +216,6 @@
     "jest-useragent-mock": "0.1.1",
     "jscodeshift": "0.13.1",
     "jsdom": "20.0.2",
-    "lodash": "4.17.21",
     "metro-react-native-babel-preset": "0.76.7",
     "moniker": "0.1.2",
     "npm-run-all": "4.1.5",
@@ -251,6 +249,8 @@
     "@use-gesture/react": "^10.2.24",
     "@floating-ui/react": "0.25.4",
     "@floating-ui/react-native": "0.10.0",
+    "@emotion/react": "^11.11.1",
+    "@table-library/react-table-library": "^4.1.7",
     "tinycolor2": "^1.6.0",
     "react": ">=18",
     "react-dom": ">=18",
@@ -270,6 +270,12 @@
       "optional": true
     },
     "@gorhom/bottom-sheet": {
+      "optional": true
+    },
+    "@table-library/react-table-library": {
+      "optional": true
+    },
+    "@emotion/react": {
       "optional": true
     }
   },
