--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -121,7 +121,7 @@
     "@table-library/react-table-library": "4.1.7",
     "@types/body-scroll-lock": "3.1.0",
     "@use-gesture/react": "10.2.24",
-    "body-scroll-lock": "4.0.0-beta.0",
+    "body-scroll-lock-upgrade": "1.1.0",
     "patch-package": "7.0.0",
     "react-native-pager-view": "6.2.1",
     "react-native-tab-view": "3.5.2",
