--- a/packages/blade/ios/blade/Info.plist
+++ b/packages/blade/ios/blade/Info.plist
@@ -36,15 +36,15 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>TASAOrbiterDisplay-Medium.otf</string>
-		<string>TASAOrbiterDisplay-Regular.otf</string>
-		<string>TASAOrbiterDisplay-SemiBold.otf</string>
 		<string>Inter-Medium.ttf</string>
 		<string>Inter-Regular.ttf</string>
 		<string>Inter-SemiBold.ttf</string>
+		<string>TASAOrbiter-Medium.otf</string>
+		<string>TASAOrbiter-Regular.otf</string>
+		<string>TASAOrbiter-SemiBold.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
