--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -124,8 +124,7 @@
     "patch-package": "7.0.0",
     "tinycolor2": "1.6.0",
     "react-native-tab-view": "3.5.2",
-    "react-native-pager-view": "6.2.1",
-    "i18nify": "github:razorpay/i18nify#master-build"
+    "react-native-pager-view": "6.2.1"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
