--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@razorpay/blade",
   "description": "The Design System that powers Razorpay",
-  "version": "10.19.1",
+  "version": "10.19.1-final-2",
   "sideEffects": false,
   "license": "MIT",
   "engines": {
@@ -75,10 +75,9 @@
   "scripts": {
     "typecheck": "run-p types:typecheck:*",
     "test": "run-p test:*",
-    "prepare": "yarn build:clean && yarn quickbuild",
-    "build": "run-s build:*",
+    "prepare": "yarn build",
+    "build": "./scripts/buildBlade.sh",
     "clearCache": "jest --clearCache",
-    "quickbuild": "./scripts/buildBlade.sh",
     "build:clean": "rm -rf build",
     "build:generate-types": "run-s types:generate-types:*",
     "build:copy-declarations": "run-s types:copy-declarations:*",
@@ -122,7 +121,20 @@
     "@babel/runtime": "7.20.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "ts-deepmerge": "6.2.0",
-    "use-presence": "1.1.0"
+    "use-presence": "1.1.0",
+    "@gorhom/bottom-sheet": "4.4.6",
+    "@gorhom/portal": "1.0.14",
+    "@use-gesture/react": "10.2.24",
+    "@floating-ui/react": "0.25.4",
+    "@floating-ui/react-native": "0.10.0",
+    "@emotion/react": "11.11.1",
+    "@table-library/react-table-library": "4.1.7",
+    "tinycolor2": "1.6.0",
+    "react-native-reanimated": "3.4.1",
+    "react-native-tab-view": "3.5.2",
+    "react-native-pager-view": "6.2.1",
+    "react-native-svg": "12.3.0",
+    "react-native-gesture-handler": "2.9.0"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -232,53 +244,18 @@
     "ttypescript": "1.5.15",
     "typescript": "4.9",
     "typescript-transform-paths": "3.4.6",
-    "@use-gesture/react": "10.2.24",
     "@types/body-scroll-lock": "3.1.0",
-    "@floating-ui/react-native": "0.10.1",
-    "@floating-ui/react": "0.25.4",
-    "react-native-pager-view": "6.2.1",
-    "react-native-tab-view": "3.5.2",
-    "tinycolor2": "1.6.0",
-    "@emotion/react": "11.11.1",
-    "@table-library/react-table-library": "4.1.7",
-    "glob": "10.3.10"
+    "glob": "10.3.10",
+    "ramda": "0.29.1"
   },
   "peerDependencies": {
-    "@gorhom/bottom-sheet": "^4",
-    "@gorhom/portal": "^1.0.14",
-    "@use-gesture/react": "^10.2.24",
-    "@floating-ui/react": "0.25.4",
-    "@floating-ui/react-native": "0.10.0",
-    "@emotion/react": "^11.11.1",
-    "@table-library/react-table-library": "^4.1.7",
-    "tinycolor2": "^1.6.0",
     "react": ">=18",
     "react-dom": ">=18",
     "react-native": "^0.72",
-    "react-native-reanimated": "^3.4.1",
-    "react-native-tab-view": "3.5.2",
-    "react-native-pager-view": "6.2.1",
-    "react-native-svg": "^12.3.0",
-    "styled-components": "^5",
-    "react-native-gesture-handler": "^2.9.0"
+    "styled-components": "^5"
   },
   "peerDependenciesMeta": {
     "react-native": {
-      "optional": true
-    },
-    "react-native-reanimated": {
-      "optional": true
-    },
-    "@gorhom/bottom-sheet": {
-      "optional": true
-    },
-    "@table-library/react-table-library": {
-      "optional": true
-    },
-    "@emotion/react": {
-      "optional": true
-    },
-    "tinycolor2": {
       "optional": true
     }
   },
