--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@razorpay/blade",
   "description": "The Design System that powers Razorpay",
-  "version": "10.19.1-final-2",
+  "version": "10.19.1",
   "sideEffects": false,
   "license": "MIT",
   "engines": {
@@ -130,7 +130,6 @@
     "@emotion/react": "11.11.1",
     "@table-library/react-table-library": "4.1.7",
     "tinycolor2": "1.6.0",
-    "react-native-reanimated": "3.4.1",
     "react-native-tab-view": "3.5.2",
     "react-native-pager-view": "6.2.1",
     "react-native-svg": "12.3.0",
@@ -252,10 +251,14 @@
     "react": ">=18",
     "react-dom": ">=18",
     "react-native": "^0.72",
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "react-native-reanimated": "^3.4.1"
   },
   "peerDependenciesMeta": {
     "react-native": {
+      "optional": true
+    },
+    "react-native-reanimated": {
       "optional": true
     }
   },
