--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -122,18 +122,11 @@
     "body-scroll-lock": "4.0.0-beta.0",
     "ts-deepmerge": "6.2.0",
     "use-presence": "1.1.0",
-    "@gorhom/bottom-sheet": "4.4.6",
-    "@gorhom/portal": "1.0.14",
     "@use-gesture/react": "10.2.24",
     "@floating-ui/react": "0.25.4",
-    "@floating-ui/react-native": "0.10.0",
     "@emotion/react": "11.11.1",
     "@table-library/react-table-library": "4.1.7",
-    "tinycolor2": "1.6.0",
-    "react-native-tab-view": "3.5.2",
-    "react-native-pager-view": "6.2.1",
-    "react-native-svg": "12.3.0",
-    "react-native-gesture-handler": "2.9.0"
+    "tinycolor2": "1.6.0"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -147,6 +140,9 @@
     "@codesandbox/sandpack-react": "1.16.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
+    "@floating-ui/react-native": "0.10.0",
+    "react-native-tab-view": "3.5.2",
+    "react-native-pager-view": "6.2.1",
     "@react-native/metro-config": "0.72.9",
     "@react-native-async-storage/async-storage": "1.19.1",
     "@react-native-community/datetimepicker": "5.0.1",
@@ -249,9 +245,16 @@
   "peerDependencies": {
     "react": ">=18",
     "react-dom": ">=18",
-    "react-native": "^0.72",
     "styled-components": "^5",
-    "react-native-reanimated": "^3.4.1"
+    "react-native": "^0.72",
+    "@floating-ui/react-native": "^0.10.0",
+    "react-native-reanimated": "^3.4.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-pager-view": "^6.2.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "@gorhom/bottom-sheet": "^4.4.6",
+    "@gorhom/portal": "^1.0.14"
   },
   "peerDependenciesMeta": {
     "react-native": {
