--- a/packages/examples/with-multiple-theme-providers/package.json
+++ b/packages/examples/with-multiple-theme-providers/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "5.0.1",
     "typescript": "4.9.3",
     "web-vitals": "2.1.4",
-    "@razorpay/blade": "../../packages/blade/build/",
+    "@razorpay/blade": "file:../../blade",
     "@fontsource/lato": "4.5.10",
     "styled-components": "5.3.6",
     "@types/styled-components": "5.1.25"
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "rm -rf node_modules/@razorpay/blade/node_modules"
   },
   "browserslist": {
     "production": [
