--- a/packages/examples/basic/package.json
+++ b/packages/examples/basic/package.json
@@ -6,10 +6,11 @@
     "build:blade": "cd ../../blade && yarn build",
     "build:app": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "analyze:only": "source-map-explorer 'build/static/js/*.js' --gzip",
-    "analyze": "yarn build && yarn analyze:only"
+    "analyze": "yarn build && yarn analyze:only",
+    "postinstall": "rm -rf node_modules/@razorpay/blade/node_modules"
   },
   "dependencies": {
-    "@razorpay/blade": "../../blade/build",
+    "@razorpay/blade": "file:../../blade",
     "@fontsource/lato": "^4.5.10",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
