--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -236,6 +236,7 @@
     "react-scripts": "5.0.1",
     "react-test-renderer": "18.2.0",
     "rollup": "3.28.1",
+    "react-refresh": "0.11.0",
     "rollup-plugin-dts": "5.3.1",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "size-limit": "8.2.4",
