refactor: move bladeCoverage file to utils

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -75,7 +75,7 @@
     "./coverage": {
       "default": {
         "types": "./coverage.d.ts",
-        "default": "./coverage.js"
+        "default": "./build/lib/web/production/utils/bladeCoverage.js"
       }
     }
   },
