feat: add getBladeCoverage and assertBladeCoverage utilities (#1864)
Co-authored-by: Kamlesh Chandnani <kamlesh.chandnani@gmail.com>

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -24,7 +24,8 @@
     "tokens.native.js",
     "utils.d.ts",
     "utils.js",
-    "utils.native.js"
+    "utils.native.js",
+    "coverageUtils.d.ts"
   ],
   "keywords": [
     "design system",
@@ -68,6 +69,12 @@
         "development": "./build/lib/web/development/utils/index.js",
         "production": "./build/lib/web/production/utils/index.js",
         "default": "./build/lib/web/production/utils/index.js"
+      }
+    },
+    "./coverageUtils": {
+      "default": {
+        "types": "./coverageUtils.d.ts",
+        "default": "./build/lib/web/production/utils/bladeCoverage.js"
       }
     }
   },
