--- a/packages/blade/tsconfig-typecheck.web.json
+++ b/packages/blade/tsconfig-typecheck.web.json
@@ -3,6 +3,7 @@
   "extends": "./tsconfig-generate-types.web.json",
   // overriding `exclude` and removed `**/**.test.ts` so that in CI test files get typechecked
   "exclude": [
+    "src",
     "**/**.stories.tsx",
     "**/**.stories.internal.tsx",
     "**/**.native.ts",
@@ -10,7 +11,9 @@
     "**/**.native.test.ts",
     "**/**.native.test.tsx",
     "**/ThemePlayground/**.tsx",
+    "**/ThemePlayground/**.ts"
   ],
+  "include": ["coverageUtils.d.ts"],
   "compilerOptions": {
     "noEmit": true,
     "emitDeclarationOnly": false
