fix: update color values contextually

--- a/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
+++ b/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
@@ -32,15 +32,15 @@
   "surface.overlay.background.400": "overlay.background.moderate",
   "surface.overlay.background.800": "overlay.background.subtle",
   "surface.popup.background": "popup.background.subtle",
-  "brand.primary.300": "interactive.background.primary.disabled",
-  "brand.primary.400": "interactive.background.primary.faded",
-  "brand.primary.500": "interactive.background.primary.default",
-  "brand.primary.600": "interactive.background.primary.highlighted",
-  "brand.primary.700": "surface.background.primary.subtle",
+  "brand.primary.300": "surface.background.primary.subtle",
+  "brand.primary.400": "surface.background.primary.subtle",
+  "brand.primary.500": "surface.background.primary.intense",
+  "brand.primary.600": "surface.background.primary.intense",
+  "brand.primary.700": "surface.background.primary.intense",
   "brand.primary.800": "surface.background.primary.intense",
-  "brand.gray.200.lowContrast": "interactive.background.staticWhite.disabled",
+  "brand.gray.200.lowContrast": "surface.background.gray.moderate",
   "brand.gray.200.highContrast": "interactive.background.staticBlack.default",
-  "brand.gray.300.lowContrast": "interactive.background.gray.highlighted",
+  "brand.gray.300.lowContrast": "surface.background.gray.subtle",
   "brand.gray.300.highContrast": "interactive.background.neutral.default",
   "brand.gray.400.lowContrast": "interactive.border.gray.faded",
   "brand.gray.400.highContrast": "interactive.border.gray.faded",
@@ -50,10 +50,10 @@
   "brand.gray.600.highContrast": "interactive.background.gray.highlighted",
   "brand.gray.700.lowContrast": "interactive.background.neutral.default",
   "brand.gray.700.highContrast": "interactive.background.staticWhite.default",
-  "brand.gray.a50.lowContrast": "interactive.background.gray.default",
-  "brand.gray.a50.highContrast": "interactive.background.gray.default",
-  "brand.gray.a100.lowContrast": "interactive.background.gray.disabled",
-  "brand.gray.a100.highContrast": "interactive.background.gray.disabled",
+  "brand.gray.a50.lowContrast": "surface.background.gray.moderate",
+  "brand.gray.a50.highContrast": "surface.background.gray.moderate",
+  "brand.gray.a100.lowContrast": "surface.background.gray.subtle",
+  "brand.gray.a100.highContrast": "surface.background.gray.subtle",
   "brand.secondary.500": "surface.text.onSea.onSubtle",
   "feedback.background.positive.lowContrast": "feedback.background.positive.subtle",
   "feedback.background.positive.highContrast": "feedback.background.positive.intense",
