--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"],
+  "include": ["src/components/Badge/Badge.tsx"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
