--- a/packages/blade/ios/blade/Info.plist
+++ b/packages/blade/ios/blade/Info.plist
@@ -42,9 +42,9 @@
 		<string>Inter-Medium.ttf</string>
 		<string>Inter-Regular.ttf</string>
 		<string>Inter-SemiBold.ttf</string>
-		<string>TASAOrbiter-Medium.otf</string>
-		<string>TASAOrbiter-Regular.otf</string>
-		<string>TASAOrbiter-SemiBold.otf</string>
+		<string>TASAOrbiterDisplay-Medium.otf</string>
+		<string>TASAOrbiterDisplay-Regular.otf</string>
+		<string>TASAOrbiterDisplay-SemiBold.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
