fix: spacing types of card

--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -4,7 +4,8 @@
     "src/components/index.ts",
     "src/tokens/index.ts",
     "src/utils/index.ts",
-    "src/@types/globals.d.ts"
+    "src/@types/globals.d.ts",
+    "src/**/**.stories.tsx"
   ],
   "compilerOptions": {
     "baseUrl": ".",
