--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-/packages/blade/ @chaitanyadeorukhkar @kamleshchandnani @anuraghazra @nashcheez @saurabhdaware @snitin315
+/packages/blade/ @chaitanyadeorukhkar @kamleshchandnani
