--- a/.github/workflows/blade-validate.yml
+++ b/.github/workflows/blade-validate.yml
@@ -18,13 +18,18 @@ jobs:
           node-version: 18.12.1
       - name: Setup Cache & Install Dependencies
         uses: ./.github/actions/install-dependencies
-      - name: Build Blade
-        run: yarn build
-        working-directory: packages/blade
-      - name: Lint Source Code
-        run: yarn lint
-      - name: Run TypeScript Checks
-        run: yarn typecheck
+      # - name: Build Blade
+      #   run: yarn build
+      #   working-directory: packages/blade
+      # - name: Lint Source Code
+      #   run: yarn lint
+      # - name: Run TypeScript Checks
+      #   run: yarn typecheck
+        # working-directory: packages/blade
+      # - name: Install Playwright for Interaction Tests
+      #   run: npx playwright install --with-deps
+      - name: Run Interaction Tests on Storybook
+        run: yarn test:react:interaction:ci 
         working-directory: packages/blade
       - name: Check Tree Shaking
         run: yarn size-limit
