--- a/.github/workflows/blade-validate.yml
+++ b/.github/workflows/blade-validate.yml
@@ -26,11 +26,6 @@ jobs:
       - name: Run TypeScript Checks
         run: yarn typecheck
         working-directory: packages/blade
-      - name: Run Interaction Tests on Storybook
-        run: |
-          npx playwright install chromium firefox webkit --with-deps
-          yarn test:react:interaction:ci 
-        working-directory: packages/blade
       - name: Check Tree Shaking
         run: yarn size-limit
         working-directory: packages/blade
@@ -51,8 +46,13 @@ jobs:
           node-version: 18.12.1
       - name: Setup Cache & Install Dependencies
         uses: ./.github/actions/install-dependencies
-      - name: Run React & React Native Tests
+      - name: Run Unit Tests
         run: yarn test
+        working-directory: packages/blade
+      - name: Run Interaction Tests
+        run: |
+          npx playwright install chromium firefox webkit --with-deps
+          yarn test:react:interaction:ci 
         working-directory: packages/blade
         env:
           SHARD: ${{ matrix.shard }}
