fix: revert stories from tsconfig

--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -4,8 +4,7 @@
     "src/components/index.ts",
     "src/tokens/index.ts",
     "src/utils/index.ts",
-    "src/@types/globals.d.ts",
-    "src/**/**.stories.tsx"
+    "src/@types/globals.d.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
