--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "src/components/index.ts",
-    "src/tokens/index.ts",
-    "src/utils/index.ts",
-    "src/@types/globals.d.ts"
+    "src"
   ],
   "compilerOptions": {
     "baseUrl": ".",
