--- a/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
+++ b/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
@@ -19,8 +19,8 @@
   "surface.text.muted.highContrast": "surface.text.gray.muted",
   "surface.text.placeholder.lowContrast": "surface.text.gray.disabled",
   "surface.text.placeholder.highContrast": "surface.text.gray.disabled",
-  "surface.action.icon.default.lowContrast": "interactive.icon.gray.default",
-  "surface.action.icon.default.highContrast": "interactive.icon.gray.default",
+  "surface.action.icon.default.lowContrast": "interactive.icon.gray.normal",
+  "surface.action.icon.default.highContrast": "interactive.icon.gray.normal",
   "surface.action.icon.hover.lowContrast": "interactive.icon.gray.highlighted",
   "surface.action.icon.hover.highContrast": "interactive.icon.gray.highlighted",
   "surface.action.icon.focus.lowContrast": "interactive.icon.gray.subtle",
