fix: Amount tests

--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../../tsconfig.json",
+  // "include": ["src"],
   "include": [
     "src/components/index.ts",
     "src/tokens/index.ts",
