fix: colortokenmappings for codemod

--- a/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
+++ b/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
@@ -21,12 +21,12 @@
   "surface.text.placeholder.highContrast": "surface.text.gray.disabled",
   "surface.action.icon.default.lowContrast": "interactive.icon.gray.normal",
   "surface.action.icon.default.highContrast": "interactive.icon.gray.normal",
-  "surface.action.icon.hover.lowContrast": "interactive.icon.gray.highlighted",
-  "surface.action.icon.hover.highContrast": "interactive.icon.gray.highlighted",
+  "surface.action.icon.hover.lowContrast": "interactive.icon.gray.normal",
+  "surface.action.icon.hover.highContrast": "interactive.icon.gray.normal",
   "surface.action.icon.focus.lowContrast": "interactive.icon.gray.subtle",
-  "surface.action.icon.focus.highContrast": "interactive.icon.gray.highlighted",
-  "surface.action.icon.active.lowContrast": "interactive.icon.gray.highlighted",
-  "surface.action.icon.active.highContrast": "interactive.icon.gray.highlighted",
+  "surface.action.icon.focus.highContrast": "interactive.icon.gray.normal",
+  "surface.action.icon.active.lowContrast": "interactive.icon.gray.normal",
+  "surface.action.icon.active.highContrast": "interactive.icon.gray.normal",
   "surface.action.icon.disabled.lowContrast": "interactive.icon.gray.disabled",
   "surface.action.icon.disabled.highContrast": "interactive.icon.gray.disabled",
   "surface.overlay.background.400": "overlay.background.moderate",
@@ -83,8 +83,8 @@
   "feedback.text.notice.highContrast": "feedback.text.notice.intense",
   "feedback.text.information.lowContrast": "feedback.text.information.intense",
   "feedback.text.information.highContrast": "feedback.text.information.intense",
-  "feedback.text.neutral.lowContrast": "feedback.text.gray.intense",
-  "feedback.text.neutral.highContrast": "feedback.text.gray.intense",
+  "feedback.text.neutral.lowContrast": "feedback.text.gray.normal",
+  "feedback.text.neutral.highContrast": "feedback.text.gray.normal",
   "feedback.icon.positive.lowContrast": "feedback.icon.positive.intense",
   "feedback.icon.positive.highContrast": "feedback.icon.positive.intense",
   "feedback.icon.negative.lowContrast": "feedback.icon.negative.intense",
@@ -93,8 +93,8 @@
   "feedback.icon.notice.highContrast": "feedback.icon.notice.intense",
   "feedback.icon.information.lowContrast": "feedback.icon.information.intense",
   "feedback.icon.information.highContrast": "feedback.icon.information.intense",
-  "feedback.icon.neutral.lowContrast": "feedback.icon.gray.intense",
-  "feedback.icon.neutral.highContrast": "feedback.icon.gray.intense",
+  "feedback.icon.neutral.lowContrast": "feedback.icon.gray.normal",
+  "feedback.icon.neutral.highContrast": "feedback.icon.gray.normal",
   "feedback.positive.action.background.primary.default.highContrast": "interactive.background.positive.default",
   "feedback.positive.action.background.primary.default.lowContrast": "interactive.background.positive.faded",
   "feedback.positive.action.background.primary.hover.highContrast": "interactive.background.positive.default",
