--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"],
-  // "include": [
-  //   "src/components/index.ts",
-  //   "src/tokens/index.ts",
-  //   "src/utils/index.ts",
-  //   "src/@types/globals.d.ts"
-  // ],
+  // "include": ["src"],
+  "include": [
+    "src/components/index.ts",
+    "src/tokens/index.ts",
+    "src/utils/index.ts",
+    "src/@types/globals.d.ts"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
