chore: update color token mapping

--- a/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
+++ b/packages/blade/codemods/brand-refresh/transformers/colorTokensMapping.json
@@ -83,8 +83,8 @@
   "feedback.text.notice.highContrast": "feedback.text.notice.intense",
   "feedback.text.information.lowContrast": "feedback.text.information.intense",
   "feedback.text.information.highContrast": "feedback.text.information.intense",
-  "feedback.text.neutral.lowContrast": "feedback.text.gray.normal",
-  "feedback.text.neutral.highContrast": "feedback.text.gray.normal",
+  "feedback.text.neutral.lowContrast": "feedback.text.neutral.intense",
+  "feedback.text.neutral.highContrast": "surface.text.staticWhite.normal",
   "feedback.icon.positive.lowContrast": "feedback.icon.positive.intense",
   "feedback.icon.positive.highContrast": "feedback.icon.positive.intense",
   "feedback.icon.negative.lowContrast": "feedback.icon.negative.intense",
@@ -93,8 +93,8 @@
   "feedback.icon.notice.highContrast": "feedback.icon.notice.intense",
   "feedback.icon.information.lowContrast": "feedback.icon.information.intense",
   "feedback.icon.information.highContrast": "feedback.icon.information.intense",
-  "feedback.icon.neutral.lowContrast": "feedback.icon.gray.normal",
-  "feedback.icon.neutral.highContrast": "feedback.icon.gray.normal",
+  "feedback.icon.neutral.lowContrast": "feedback.icon.neutral.intense",
+  "feedback.icon.neutral.highContrast": "surface.icon.staticWhite.normal",
   "feedback.positive.action.background.primary.default.highContrast": "interactive.background.positive.default",
   "feedback.positive.action.background.primary.default.lowContrast": "interactive.background.positive.faded",
   "feedback.positive.action.background.primary.hover.highContrast": "interactive.background.positive.default",
