feat: setup interaction testing (#1895)
Co-authored-by: Chaitanya Deorukhkar <deorukhkarchaitanya@gmail.com>
Co-authored-by: Nitin Kumar <nitin.kumar@razorpay.com>
Co-authored-by: Nitin Kumar <snitin315@gmail.com>
Co-authored-by: anuraghazra <anurag.hazra@razorpay.com>

--- a/.github/workflows/blade-validate.yml
+++ b/.github/workflows/blade-validate.yml
@@ -46,7 +46,7 @@ jobs:
           node-version: 18.12.1
       - name: Setup Cache & Install Dependencies
         uses: ./.github/actions/install-dependencies
-      - name: Run React & React Native Tests
+      - name: Run Unit Tests
         run: yarn test
         working-directory: packages/blade
         env:
