chore: fix all examples

--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -6,7 +6,7 @@
     "src/utils/index.ts",
     "src/@types/globals.d.ts"
   ],
-  // "include": ["src"],
+  "include": ["src"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
