--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "packages/blade/src/components/index.ts",
     "@testing-library/user-event/dist/types/**",
     "@storybook/*"
-  ]
+  ],
+  "nuxt.isNuxtApp": false
 }
