--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -269,7 +269,8 @@
     "typescript": "4.9",
     "typescript-transform-paths": "3.4.6",
     "@types/body-scroll-lock": "3.1.0",
-    "ramda": "0.29.1"
+    "ramda": "0.29.1",
+    "@razorpay/i18nify-js": "^1.3.1"
   },
   "peerDependencies": {
     "react": ">=18",
@@ -283,7 +284,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-gesture-handler": "^2.9.0",
     "@gorhom/bottom-sheet": "^4.4.6",
-    "@gorhom/portal": "^1.0.14"
+    "@gorhom/portal": "^1.0.14",
+    "@razorpay/i18nify-js": "^1.3.1"
   },
   "peerDependenciesMeta": {
     "react-native": {
@@ -298,7 +300,9 @@
     "@storybook/**/react": "18.2.0",
     "react-dom": "18.2.0",
     "react": "18.2.0",
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "@types/react": "17.0.38",
+    "@types/react-native": "0.72.2"
   },
   "bundlemon": {
     "files": [
